Updated hospital banner text for compliance demo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="hero-text">
-      <h1>Welcome to Sunrise Hospital</h1>
+      <h1>Welcome to Sunrise Hospital-Trusted by Many</h1>
       <p>Your health is our priority. Book your appointment online easily.</p>
       <button id="showFormBtn" class="btn">Book Now</button>
     </div>
@@ -103,3 +103,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
