Revert "Updated the appointment booking form"

--- a/index.html
+++ b/index.html
@@ -35,17 +35,8 @@
   <section id="book" class="booking-section">
     <h2>Book Your Appointment</h2>
     <form id="appointmentForm" style="display:none;">
-      <label for="name">First Name</label>
+      <label for="name">Full Name</label>
       <input type="text" id="name" required>
-
-      <label for="name">Last Name</label>
-      <input type="text" id="name" required>
-
-      <label for="name">Email</label>
-      <input type="text" id="email" required>
-      
-      <label for="name">Reason</label>
-      <input type="text" id="description" required>
 
       <label for="date">Date</label>
       <input type="date" id="date" required>
